@@ -28,6 +28,7 @@ Changelog
  * Added name attributes to all built-in page action menu items (LB (Ben Johnston))
  * Added validation on the filter string to the Jinja2 image template tag (Jonny Scholes)
  * Changed the pages reodering UI toggle to make it easier to find (Katie Locke, Thibaud Colas)
+ * Added support for rich text link rewrite handlers for `external` and `email` links (Md Arifin Ibne Matin)
  * Fix: Set `SERVER_PORT` to 443 in `Page.dummy_request()` for HTTPS sites (Sergey Fedoseev)
  * Fix: Include port number in `Host` header of `Page.dummy_request()` (Sergey Fedoseev)
  * Fix: Validation error messages in `InlinePanel` no longer count towards `max_num` when disabling the 'add' button (Todd Dembrey, Thibaud Colas)
